# pydantic-ai_fork

./: agent_router.md
agents/: __init__.py
agents/pipeline_agent/: TODO.md  design.md  fleshy.py  implementation_plan.md  skeleton.py
agents/router/: COMPATIBILITY_REPORT.md  FUTURE_PLANS.md  README.md  ROUTER_AGENT2_PATCH.md  __init__.py  __main__.py  clai_compatible.py  graph_router.py  pyproject.toml  router_agent.py  router_agent2.py  subgraph_routing.md  visualize.py
agents/router/visualizer/: __init__.py  __main__.py  core.py
skeleton_agent_system/: README.md  guidelines.md  pyproject.toml
skeleton_agent_system/app/: __main__.py
skeleton_agent_system/app/agents/deterministic/: calculator.py
skeleton_agent_system/app/agents/router/: classifier.py
skeleton_agent_system/app/core/: base_agent.py  context.py  decorators.py  observability.py  telemetry.py  tracing.py
skeleton_agent_system/app/evals/: __init__.py  agent_eval.py  cli.py
skeleton_agent_system/app/graphs/: root.py
skeleton_agent_system/app/graphs/domains/coding/: graph.py
skeleton_agent_system/app/graphs/domains/operations/: graph.py
skeleton_agent_system/app/graphs/domains/search/: graph.py
skeleton_agent_system/app/models/: inputs.py  outputs.py  states.py
skeleton_agent_system/app/persistence/: memory.py
skeleton_agent_system/app/tools/: bash.py  web.py
skeleton_agent_system/config/: agents.yaml  graphs.yaml
skeleton_agent_system/docs/: monitoring.md
